<resources>
    <string name="app_name">jobClique</string>

    <string name="jobApplication">Job application</string>

    <string name="login_page">Login Page</string>

    <!--fragments-->
    <string name="hello_Home">Hello Home</string>
    <string name="hello_Profile">Hello Profile</string>
    <string name="hello_WishList">Hello Wish List</string>

    <!--search -->
    <string name="hello_Search">Hello Search</string>
    <string name="searchHint">Enter a job title</string>

    <!-- jobs-->
    <string name="se_job_title">Software Engineer</string>

    <!-- Application -->
    <string name="Apply_for_this_job">Apply for this job</string>
    <string name="tv_application_name">Your Name :</string>
    <string name="tv_application_email">Your Email :</string>
    <string name="tv_application_pno">Your Phone Number :</string>
    <string name="tv_application_attach">Attach CV / Resume :</string>
    <string name="tv_application_nofile">No file chosen</string>
    <string name="tv_application_addi">Additional Details :</string>
    <!-- buttons-->
    <string name="btn_choose_file">Choose File</string>
    <string name="btn_application_send">Send Application</string>
    <!-- hints-->
    <string name="application_hint_name">Enter your name here</string>
    <string name="application_hint_email">Enter your email here</string>
    <string name="application_hint_phnno">Enter your phone number here</string>
    <string name="application_hint_addi">(Optional)</string>

    <!--Applied Jobs-->
    <string name="Applied_Jobs_Title">Applied Jobs List</string>
    <string name="Applied_jobs_description"> A list of job vacancies you have applied.</string>

    <!--Received applications-->
    <string name="Employer_Notifi_Title">Notifications</string>
    <string name="Employer_Appli_Title">Received Applications</string>
    <string name="Appli_desc">Open Positions</string>
    <string name="appli_button">See</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">JobClique</string>

    <!--    wishlist-->
    <string name="wish_list_header">My Wish List</string>
    <string name="wishlist_itemhead1">AIA Wealth Planner\'s Manager</string>
    <string name="wishlist_subhead1">AIA Insurance</string>
    <string name="wishlist_itemhead2">Call Center Agent</string>
    <string name="wishlist_subhead">Kapruka Holdings PLC</string>
    <string name="wishlist_itemhead3">Branch Manager</string>
    <string name="wishlist_subHead3">Allianz Insurance Lanka Limited</string>
    <string name="wishlist_itemHead4">Business Analyst</string>
    <string name="wishlist_subhead4">Virtusa (Pvt.) Ltd</string>

    <!--    testButtons-->
    <string name="test_btn1_jobseeker">I am Job Seeker</string>
    <string name="text_btn2_employer">I am Employer</string>
    <string name="test_btn3_admin">I am Administrator</string>
    <string name="btnTestEmpRegiPart2">Employer Registration Prat 2</string>
    <string name="employerHome">I am Employer</string>


    <!--    login-->
    <string name="login_head">Login</string>
    <string name="loginpage_email_text">Enter Your Email Address :</string>
    <string name="loginEmail_hint">Enter Email Here</string>
    <string name="userloginpw_head">Enter Your Password :</string>
    <string name="login_rememberMe_text">Remember me</string>
    <string name="btnlogin_text">Login</string>
    <string name="loginForgot_pw"><a href="">Forgot password?</a></string>
    <string name="loginRegiLink">Don\'t have an account? <a href="">Sign up here</a></string>
    <string name="btntestLogin">Login</string>

    <!--    signup-->
    <string name="signup_head">Sign Up</string>
    <string name="userRegiName">Enter Your Name :</string>
    <string name="userRegiNameHint">Enter Name Here</string>
    <string name="signup_email">Enter Your Email Address :</string>
    <string name="signup_pw1">Enter Your Password :</string>
    <string name="regiPw_hint">Enter Password Here</string>
    <string name="regiPw2">Enter Your Password Again :</string>
    <string name="pw_hint2">Enter Confirm Password</string>
    <string name="regi_radio_head">Are you a Job Seeker or an Employer?</string>
    <string name="regiRadio1_text">Job Seeker: (I want to look and apply for jobs)</string>
    <string name="regiRadio2_text">Employer: (I want to find great candidates)</string>
    <string name="regiPage_btnJoinNow">Join Now</string>
    <string name="haveaccounLoginBtn">Already have an account? <a href="">Login Here</a></string>
    <string name="userRegi_title">Welcome to JobClique !</string>
    <string name="btntestSignUp">Sign Up</string>

    <!--    employer Registration P2-->
    <string name="eployerRegi_title">Create a New Company Account</string>
    <string name="emplyerNextSubTitle">Create your company account to post Job Ads with JobClique</string>
    <string name="empRegiNPartCName">Your Company Name :</string>
    <string name="empRegiCNameSub">This company name will appear in job listings.</string>
    <string name="Enter_Company_Name">Enter Company Name</string>
    <string name="empRegiphnnum">Your Phone Number :</string>
    <string name="empregiaddphnsubhead">Enter your contact number, so we can reach you if we need to improve your results. (This number will NOT appear in job listings.)</string>
    <string name="empregiphnNumhint">Enter Phone Number</string>
    <string name="cancelempcompanyAddbtn">Cancel this ! I\'m Job Seeker</string>
    <string name="empCompanyCreatebtn">Create Account</string>

    <!--    jobseeker Profile-->
    <string name="jobseeker_profile_header">My Profile</string>
    <string name="jobseeker_profile_head">Wellcome !</string>
    <string name="profileEdtNameTitle">My Name :</string>
    <string name="profileEdtMyName">Kalinga</string>
    <string name="profileMyEmailTitle">My Email :</string>
    <string name="profileEditEmail">kalingajayathilaka@gmail.com</string>
    <string name="profileSveChngeBtn">Save Changes</string>
    <string name="profileUpdteDetailsTitle">Update My Profile</string>
    <string name="btnProfileRsetPw">Reset Password</string>
    <string name="btnProfileWistList">My Wish List</string>
    <string name="btnProfile_Appliedjobs">Applied Jobs</string>
    <string name="btnProfileLogOut">Logout</string>
    <string name="profileDlt">Delete My Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_ResetPassword_fragment">Hello Kalinga You are in reset fragment</string>

    <!--    user reset Password-->
    <string name="reSetPwHead">Reset My Password</string>
    <string name="resetPwcurrentPw">Enter Current Password :</string>
    <string name="resetPwNewPw">Enter New Password :</string>
    <string name="resetPwConfirmPw">Enter Confirm Password :</string>
    <string name="currPwHint">Enter Current Password Here</string>
    <string name="newPwHint">Enter New Password Here</string>
    <string name="ConfirmPwHint">Enter Confirm Password Here</string>
    <string name="btnResetPw">Reset Password</string>
    <string name="btnResetPwCancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="empProfileEdtcomName">My Company Name :</string>
    <string name="procomname">Virtusa Pvt (Ltd)</string>
    <string name="empProfilePhnNum">My Mobile Number :</string>
    <string name="empProfilePhn">+94761760579</string>
    <string name="empProfileBtnMyJobPost">My Job Posts</string>
    <string name="approveBtn">Approve</string>
    <string name="declineBtn">Decline</string>
    <string name="tvReqPostDesc">Description about the requested posts</string>
    <string name="dltAccHead">Delete Account ?</string>
    <string name="dltAccountTxt1">You\'ll permanently lose your Account</string>
    <string name="dltAccSunTxt2">This Action Can Not Be Undo</string>
    <string name="dlt_acc_Cancel">CANCEL</string>
    <string name="dlt_acc_btn_dlete">DELETE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="iamEmployer">I AM EMPLOYER</string>
    <string name="tvNoitfyRequests">Requests</string>
    <string name="request_1" />
    <string name="requestNotify">Requests</string>
    <string name="Approvebtn">Approve</string>
    <string name="Declinebtn">Decline</string>
    <string name="jobSeeker" />
    <string name="employer" />
    <string name="admin">Admin</string>
    <string name="testempreg">eReg</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="addPost">Click here to Add New Post</string>
    <string name="PostRequest">Request to Add New Post</string>
    <string name="postStatus" />
    <string name="jobName">Job Name</string>
    <string name="jobEmail">Email</string>
    <string name="jobDescrip">Job Discription</string>
    <string name="jobImage" />
    <string name="logoutConfirm">Are you sure ?</string>
    <string name="logoutConfirmlogoutText">Log Out</string>
    <string name="resetPWtext">After send the your password request please check your email address to further process</string>


</resources>