<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    tools:context=".resetPassword">

    <TextView
        android:id="@+id/textView34"
        android:layout_width="0dp"
        android:layout_height="77dp"
        android:autoText="false"
        android:background="@color/Blue"
        android:contextClickable="false"
        android:gravity="center_horizontal|center_vertical"
        android:paddingLeft="@dimen/myPadding"
        android:text="@string/reSetPwHead"
        android:textAlignment="viewStart"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textIsSelectable="false"
        android:textSize="@dimen/header_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/baseline_lock_person_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView34" />

    <LinearLayout
        android:id="@+id/cardView"
        android:layout_width="370dp"
        android:layout_height="420dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_profile_navigation_btn"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:layout_constraintVertical_bias="0.163">

        <TextView
            android:id="@+id/textView37"
            android:layout_width="match_parent"
            android:layout_height="@dimen/resetPwTitleHeight"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/myPadding"
            android:paddingTop="@dimen/myExtraPadding"
            android:text="@string/resetPwcurrentPw"
            android:textColor="@color/lightBlue"
            android:textSize="@dimen/profileMainTitle"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPassword5"
            android:layout_width="@dimen/profileLayoutWidth"
            android:layout_height="@dimen/profileLayoutHeight"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/round_login_bars"
            android:ems="10"
            android:hint="@string/currPwHint"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/myPadding" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="match_parent"
            android:layout_height="@dimen/resetPwTitleHeight"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/myPadding"
            android:paddingTop="@dimen/myExtraPadding"
            android:text="@string/resetPwNewPw"
            android:textColor="@color/lightBlue"
            android:textSize="@dimen/profileMainTitle"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPassword6"
            android:layout_width="@dimen/profileLayoutWidth"
            android:layout_height="@dimen/profileLayoutHeight"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/round_login_bars"
            android:ems="10"
            android:hint="@string/newPwHint"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/myPadding" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="match_parent"
            android:layout_height="@dimen/resetPwTitleHeight"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/myPadding"
            android:paddingTop="@dimen/myExtraPadding"
            android:text="@string/resetPwConfirmPw"
            android:textColor="@color/lightBlue"
            android:textSize="@dimen/profileMainTitle"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPassword7"
            android:layout_width="@dimen/profileLayoutWidth"
            android:layout_height="@dimen/profileLayoutHeight"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/round_login_bars"
            android:ems="10"
            android:hint="@string/ConfirmPwHint"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/myPadding" />

    </LinearLayout>

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintBaseline_toBaselineOf="@+id/button14"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button10"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>